--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start-dev": "ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3"
   }
 }
