--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "14.x"
   },
+  "main": "src/index.ts",
   "scripts": {
     "start-dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
