--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "main": "src/index.ts",
   "scripts": {
-    "start-dev": "ts-node src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc"
+    "start": "npx tsc -w ",
+    "dev": "npx nodemon"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
@@ -17,6 +16,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3"
   }
