--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "main": "src/index.ts",
   "scripts": {
-    "start": "npx tsc -w ",
-    "dev": "npx nodemon"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
